--- a/Data Collection and Cleaning.ipynb
+++ b/Data Collection and Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -164,43 +164,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Append all_stars rosters to list\n",
-    "def get_allstar_players(year):\n",
-    "    year_string = '%s' % str(year)\n",
-    "    url = \"http://www.basketball-reference.com/allstar/NBA_%s.html/\" %year_string\n",
+    "def get_allstars(year):\n",
+    "    url = \"http://www.basketball-reference.com/allstar/NBA_%s.html/\" % str(year)\n",
     "    req = requests.get(url)\n",
-    "    allstar = BeautifulSoup(req.text, 'html.parser')\n",
-    "    count1 = 0\n",
-    "    count2 = 0\n",
+    "    soup = BeautifulSoup(req.text, 'html.parser')\n",
+    "    all_stars = []\n",
     "    \n",
-    "    for row in allstar.find(\"div\", {\"id\" : \"all_East\"}).find_all(\"th\", {\"class\" : \"left\", \"scope\" : \"row\", \"csk\" : True}):\n",
-    "        all_stars_East.append(row.find(\"a\").text)\n",
-    "        count1 += 1\n",
+    "    for row in soup.find(\"div\", {\"id\" : \"all_East\"}).find_all(\"th\", {\"class\" : \"left\", \"scope\" : \"row\", \"csk\" : True}):\n",
+    "        all_stars.append(row.find(\"a\").text)\n",
     "        \n",
-    "    if count1 != 12:\n",
-    "        for i in range(count1, 12):\n",
-    "            all_stars_East.append(\"\")\n",
-    "            count1 += 1\n",
     "        \n",
-    "    for row in allstar.find(\"div\", {\"id\" : \"all_West\"}).find_all(\"th\", {\"class\" : \"left\", \"scope\" : \"row\", \"csk\" : True}):\n",
-    "        all_stars_West.append(row.find(\"a\").text)\n",
-    "        count2 += 1\n",
-    "    \n",
-    "    if count2 != 12:\n",
-    "        for i in range(count2, 12):\n",
-    "            all_stars_West.append(\"\")\n",
-    "            count2 += 1"
+    "    for row in soup.find(\"div\", {\"id\" : \"all_West\"}).find_all(\"th\", {\"class\" : \"left\", \"scope\" : \"row\", \"csk\" : True}):\n",
+    "        all_stars.append(row.find(\"a\").text)\n",
+    "        \n",
+    "    return all_stars"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -211,18 +200,18 @@
     "    url = \"http://www.nba.com/history/all-defensive-teams/\"\n",
     "    req = requests.get(url)\n",
     "    defensive = BeautifulSoup(req.text, 'html.parser')\n",
-    "    all_defend = []\n",
+    "    all_defense = []\n",
     "    \n",
     "    for i in defensive.find_all(\"td\" , {\"class\" : \"cnnIEColTxtL\", \"style\" : \"text-align: center\"}):\n",
     "        if i.text == \"First Team\":\n",
     "            continue\n",
     "        else:\n",
-    "            all_defend.append(i.text)"
+    "            all_defense.append(i.text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -234,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -243,41 +232,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2015\n",
-      "2014\n",
-      "2013\n",
-      "2012\n",
-      "2011\n",
-      "2010\n",
-      "2009\n",
-      "2008\n",
-      "2007\n",
-      "2006\n",
-      "2005\n",
-      "2004\n",
-      "2003\n",
-      "2002\n",
-      "2001\n",
-      "2000\n",
-      "1999\n"
+      "2015\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'find_all'",
+     "ename": "NameError",
+     "evalue": "name 'all_star' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-221-b80440a51df7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mall_stars_West\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mget_allstar_players\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-217-a11d2b379d43>\u001b[0m in \u001b[0;36mget_allstar_players\u001b[0;34m(year)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mcount2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[1;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mallstar\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"div\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;34m\"id\"\u001b[0m \u001b[1;33m:\u001b[0m \u001b[1;34m\"all_East\"\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"th\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;34m\"class\"\u001b[0m \u001b[1;33m:\u001b[0m \u001b[1;34m\"left\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"scope\"\u001b[0m \u001b[1;33m:\u001b[0m \u001b[1;34m\"row\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"csk\"\u001b[0m \u001b[1;33m:\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m         \u001b[0mall_stars_East\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"a\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mcount1\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'find_all'"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-f72789449aca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mall_stars_West\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mget_allstars\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-18-0fa671a32d37>\u001b[0m in \u001b[0;36mget_allstars\u001b[0;34m(year)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"div\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\"id\"\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0;34m\"all_East\"\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"th\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\"class\"\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0;34m\"left\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"scope\"\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0;34m\"row\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"csk\"\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mall_star\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"a\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'all_star' is not defined"
      ]
     }
    ],
    "source": [
-    "num_players = [\"Player 1\", \"Player 2\", \"Player 3\", \"Player 4\", \"Player 5\", \"Player 6\", \"Player 7\", \"Player 8\", \"Player 9\", \n",
-    "              \"Player 10\", \"Player 11\", \"Player 12\"]\n",
+    "num_players = [\"Player %d\" % i for i in range(13)]\n",
     "east = pd.DataFrame(columns=num_players, index = reversed_year).fillna(\"\")\n",
     "west = pd.DataFrame(columns=num_players, index = reversed_year).fillna(\"\")\n",
     "row = 0\n",
@@ -286,7 +258,7 @@
     "    all_stars_East = []\n",
     "    all_stars_West = []\n",
     "    print(i)\n",
-    "    get_allstar_players(i)\n",
+    "    get_allstars(i)\n",
     "    time.sleep(0.2)\n",
     "\n",
     "    east.loc[i, :] = all_stars_East\n",
@@ -306,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -315,7 +287,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "['Oscar Robertson', 'Jerry Lucas', 'Bill Russell', 'Sam Jones', 'Luke Jackson', 'Willis Reed', 'Hal Greer', 'Wayne Embry', 'Johnny Green', 'Larry Costello', 'Jerry West', 'Bob Pettit', 'Wilt Chamberlain', 'Elgin Baylor', 'Lenny Wilkens', 'Gus Johnson', 'Terry Dischinger', 'Walt Bellamy', 'Don Ohl', 'Nate Thurmond']\n"
      ]
     }
    ],
@@ -330,7 +302,8 @@
     "   \n",
     "    season_awards = get_award_winners(season, i-1)\n",
     "    \n",
-    "    as_rosters = get_allstar_players(season, i)\n",
+    "    allst_roster = get_allstars(i)\n",
+    "    print(allst_roster)\n",
     "    \n",
     "    for team in teams:\n",
     "        if(team.text == 'Team' or 'Conference' in team.text):\n",
@@ -352,6 +325,59 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = [\"Player %d\" % i for i in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Player 0',\n",
+       " 'Player 1',\n",
+       " 'Player 2',\n",
+       " 'Player 3',\n",
+       " 'Player 4',\n",
+       " 'Player 5',\n",
+       " 'Player 6',\n",
+       " 'Player 7',\n",
+       " 'Player 8',\n",
+       " 'Player 9']"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
@@ -360,18 +386,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.0"
   }
  },
  "nbformat": 4,
